fixed line-height and align-items

--- a/client/src/components/OneMinuteForm.css
+++ b/client/src/components/OneMinuteForm.css
@@ -84,8 +84,8 @@ form {
 .attach-title-div {
   display: flex;
   flex-direction: row;
+  align-items: center;
   height: 41px;
-  line-height: 0px;
   margin-top: auto;
   margin-bottom: auto;
 }
